@@ -16,7 +16,7 @@ class TruncateAuditLogsJob
       .where(account_id: account_id)
       .order(:at)
       .reverse
-      .offset(100)
+      .offset(99)
       .select_map(:id)
       .each { DB[:account_authentication_audit_logs].where(id: _1).delete }
     # DB[:account_authentication_audit_logs].where(id: account_id){at > Time.at(Time.now - (30*60*60*24))}.order(:at).all
